--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "scripts.js",
   "scripts": {
     "build": "wp-scripts build",
-    "start": "wp-scripts start src/index.js src/settings.js --output-path=build",
+    "start": "wp-scripts start",
     "dev": "wp-scripts start",
     "devFast": "wp-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,8 @@
     "puppeteer-core": "^23.9.0"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^30.8.1"
+    "@wordpress/scripts": "^30.8.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.7.2"
   }
 }
