--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
 			"*": ["node_modules/*"]
 		}
 	},
-	"include": ["src", "src/**/*.ts", "src/**/*.tsx"],
+	"include": ["src", "src/**/*.ts", "src/**/*.tsx", "src/**/block.json"],
 	"exclude": ["assets/js", "build", "node_modules", "vendor"]
 }
