start of translation to swedish

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@wordpress/components": "^29.1.1",
 		"@wordpress/dom-ready": "^4.15.0",
 		"@wordpress/element": "^6.15.1",
+		"@wordpress/i18n": "^5.19.0",
 		"zod": "^3.24.2"
 	}
 }
